--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "react-native": "0.69.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@expo/webpack-config": "^0.17.0",
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-native": "^4.0.0",
+    "react-dom": "18.0.0",
+    "react-native-web": "~0.18.7"
   },
   "private": true
 }
