--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-template-literals": "^7.18.9",
     "@expo/webpack-config": "^0.17.0",
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
