--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^1.1.2",
     "expo": "~46.0.9",
-    "expo-checkbox": "^2.2.0",
+    "expo-checkbox": "~2.2.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
