--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/dev-server": "0.1.120",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/checkbox": "^0.5.12",
@@ -38,5 +39,6 @@
     "react-dom": "18.0.0",
     "react-native-web": "~0.18.7"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@3.3.0"
 }
