--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~46.0.9",
     "expo-checkbox": "~2.2.0",
     "expo-status-bar": "~1.4.0",
+    "i18next": "^22.0.6",
     "react": "18.0.0",
     "react-hook-form": "^7.37.0",
     "react-native": "0.69.6",
