--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "expo-checkbox": "~2.2.0",
     "expo-status-bar": "~1.4.0",
     "i18next": "^22.0.6",
+    "i18next-react-native-language-detector": "^1.0.2",
     "react": "18.0.0",
     "react-hook-form": "^7.37.0",
+    "react-i18next": "^12.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-locale-detector": "^1.0.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
