--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^1.1.2",
     "expo": "~46.0.9",
     "expo-checkbox": "~2.2.0",
-    "expo-font": "^11.0.1",
+    "expo-font": "~10.2.0",
     "expo-linear-gradient": "11.4.0",
     "expo-status-bar": "~1.4.0",
     "i18next": "^22.0.6",
