--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.37.0",
     "react-i18next": "^12.0.0",
     "react-native": "0.69.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-locale-detector": "^1.0.1",
     "react-native-reanimated": "~2.9.1",
