--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@expo/dev-server": "0.1.120",
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.8",
+    "@supabase/supabase-js": "^2.2.2",
     "axios": "^1.1.2",
     "expo": "~46.0.9",
     "expo-checkbox": "~2.2.0",
@@ -28,11 +29,13 @@
     "react-hook-form": "^7.37.0",
     "react-i18next": "^12.0.0",
     "react-native": "0.69.6",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-locale-detector": "^1.0.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-url-polyfill": "^1.3.0",
     "spinners-react": "^1.0.7"
   },
   "devDependencies": {
