--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "spinners-react": "^1.0.7"
+    "spinners-react": "^1.0.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
