--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^13.7.0",
     "react-native-url-polyfill": "^1.3.0",
     "spinners-react": "^1.0.7",
     "typescript": "^4.6.3"
