--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-url-polyfill": "^1.3.0",
-    "spinners-react": "^1.0.7",
-    "typescript": "^4.6.3"
+    "spinners-react": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
